[package]
name = "pdf-api"
publish = false  # crates.io: name "pdfspine" reserved only; this lib ships via PyPI (Python-first, like ragspine)
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Unified ergonomic facade and re-exports for pdfspine; the only crate py-bindings touches."

[dependencies]
pdf-core.workspace = true
pdf-text.workspace = true
pdf-edit.workspace = true
pdf-fonts.workspace = true
pdf-image.workspace = true
# Markdown → PDF (pdfspine-original extension, PRD-NEXT §9) — facade in
# `src/markdown.rs`; not part of the fitz-compat surface.
pdf-markdown.workspace = true
pdf-render.workspace = true
# `default-features = false` so pdf-api's own (default-on) `paddle-ocr` feature
# is the single switch that turns the PaddleOCR engine on/off — building pdf-api
# with `--no-default-features` then truly compiles the engine out.
pdf-ocr = { workspace = true, default-features = false }
pdf-crypto = { workspace = true, optional = true }
bytes.workspace = true

[features]
# Encryption is ON by default so the shipped wheel can open encrypted PDFs from
# Python (PRD §8.4 / M1f). Threads through to `pdf-core`'s `encryption` feature
# and surfaces `pdf-crypto`'s encryption-authoring types for `save(encryption=…)`.
# `paddle-ocr` is OFF by default (P0-5): the lean base wheel must not carry the
# ~16 MB PaddleOCR engine. The opt-in OCR build (`pip install pdfspine[ocr]` /
# `maturin develop --features ocr`) turns it on; it forwards to `pdf-ocr`'s
# `paddle-ocr` feature.
default = ["encryption"]
encryption = ["pdf-core/encryption", "dep:pdf-crypto"]
paddle-ocr = ["pdf-ocr/paddle-ocr"]

[dev-dependencies]
# Encrypted-document integration fixtures are generated via `pdf-crypto`'s
# test-support encrypt path (no external files) — only built under `encryption`.
pdf-crypto = { workspace = true, features = ["test-support"] }
