[package]
name = "pdf-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "oxide-pdf core: object model, lexer/parser, xref, filters, writer, geometry. No domain logic."

[dependencies]
thiserror.workspace = true
bytes.workspace = true
flate2.workspace = true
weezl.workspace = true
pdf-crypto = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
# The encryption integration tests build self-generated encrypted fixtures via
# `pdf_crypto::testsupport`, which lives behind `pdf-crypto`'s `test-support`
# feature. Only exercised under `--features encryption`.
pdf-crypto = { workspace = true, features = ["test-support"] }

[features]
default = []
# `pdf-core` uses `pdf-crypto` behind the `encryption` feature (PRD §9.1).
encryption = ["dep:pdf-crypto"]
