[package]
name = "pdf-crypto"
publish = false  # crates.io: name "pdfspine" reserved only; this lib ships via PyPI (Python-first, like ragspine)
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Standard PDF security handler (RC4/AES-128/AES-256, R2-R6) for pdfspine."

[dependencies]
thiserror.workspace = true
aes.workspace = true
cbc.workspace = true
sha2.workspace = true
md-5.workspace = true
cipher.workspace = true
getrandom.workspace = true

[dev-dependencies]
proptest.workspace = true
# Self-reference with `test-support` so the integration tests in `tests/` (which
# link the lib as a normal dependency, without `cfg(test)`) can use
# `pdf_crypto::testsupport`. Standard cargo idiom for test-only feature enabling.
pdf-crypto = { path = ".", features = ["test-support"] }

[features]
default = []
# Exposes `pdf_crypto::testsupport` — the encrypt-side fixture builders used by
# the M1e/M1-integration tests and the seed of the M3 write API. Off by default
# so the shipping read-only build never includes the authoring helpers.
test-support = []
