[package]
name = "pdf-edit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Page ops, insert_pdf, annotations/links/forms, content emission, metadata/TOC, redaction for oxipdf. Placeholder in M0."

[dependencies]
pdf-core.workspace = true
pdf-fonts.workspace = true
pdf-text.workspace = true
ttf-parser.workspace = true

[dev-dependencies]
ttf-parser.workspace = true
