[package]
name = "pdf-fonts"
publish = false  # crates.io: name "pdfspine" reserved only; this lib ships via PyPI (Python-first, like ragspine)
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Font parsing for mapping (encodings/ToUnicode/CMap/widths/glyph->Unicode) for pdfspine. No rasterization."

[dependencies]
pdf-core.workspace = true
smol_str.workspace = true

[dev-dependencies]
proptest.workspace = true
