[package]
name = "pdf-ocr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Pluggable OCR (Tesseract default) -> OCR TextPage + searchable sandwich PDF for pdfspine (M8)."

[dependencies]
# Objects + geometry (Matrix/Point/Rect) + the typed Error this crate wraps.
pdf-core.workspace = true
# The page rasterizer: a page -> Pixmap is the OCR engine's input (PRD §8.11).
pdf-render.workspace = true
# Pixmap (the engine input raster) + image-document -> PDF conversion (the
# sandwich page image layer).
pdf-image.workspace = true
# The TextPage / Block / Line / Span / Char model the OCR result is mapped into,
# plus the device/page transform helpers used for pixel -> page-point mapping.
pdf-text.workspace = true
# Content insertion (invisible Tr-3 text layer) + page merge for assembling the
# multi-page sandwich document.
pdf-edit.workspace = true
# Typed error wrapping (`From` impls for the upstream crate errors).
thiserror.workspace = true

# --- `paddle-ocr` feature: pure-Rust PaddleOCR (PP-OCRv4) engine ---
# Optional heavy deps, gated behind the (default-on) `paddle-ocr` feature so the
# base crate stays lean and the engine can be compiled out with
# `--no-default-features`.
# `tract-onnx`: pure-Rust ONNX inference (det/rec/cls). `image`: pure-Rust resize.
tract-onnx = { workspace = true, optional = true }
image = { workspace = true, optional = true }

[features]
# On by default so the wheel (py-bindings -> pdf-api -> pdf-ocr, all default
# features) ships the PaddleOCR engine. Disable with `--no-default-features`.
default = ["paddle-ocr"]
# Gates the whole `paddle` module + its tract-onnx/image dependencies.
paddle-ocr = ["dep:tract-onnx", "dep:image"]

[dev-dependencies]
proptest.workspace = true
