[package]
name = "pdf-ocr"
publish = false  # crates.io: name "pdfspine" reserved only; this lib ships via PyPI (Python-first, like ragspine)
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Pluggable OCR (Tesseract default) -> OCR TextPage + searchable sandwich PDF for pdfspine (M8)."

[dependencies]
# Objects + geometry (Matrix/Point/Rect) + the typed Error this crate wraps.
pdf-core.workspace = true
# The page rasterizer: a page -> Pixmap is the OCR engine's input (PRD §8.11).
pdf-render.workspace = true
# Pixmap (the engine input raster) + image-document -> PDF conversion (the
# sandwich page image layer).
pdf-image.workspace = true
# The TextPage / Block / Line / Span / Char model the OCR result is mapped into,
# plus the device/page transform helpers used for pixel -> page-point mapping.
pdf-text.workspace = true
# Content insertion (invisible Tr-3 text layer) + page merge for assembling the
# multi-page sandwich document.
pdf-edit.workspace = true
# Typed error wrapping (`From` impls for the upstream crate errors).
thiserror.workspace = true

# --- `paddle-ocr` feature: PaddleOCR (PP-OCRv5) engine via `ocrspine` ---
# Gated behind the (default-OFF) `paddle-ocr` feature so the base crate / wheel
# stays lean (P0-5): the multi-MB OCR inference path is compiled out by default
# and only the opt-in `pdfspine[ocr]` build pulls it in.
#
# `ocrspine`: the sibling, domain-neutral OCR crate (image -> words). It owns the
# PP-OCRv5 ONNX weights + the tract/rayon inference pipeline once for the whole
# Spine family — pdf-ocr no longer carries a duplicate engine or duplicate ONNX
# weights, it just bridges Pixmap <-> ocrspine (same sibling `path` pattern as
# ragspine -> corespine). `image`: the `RgbImage` the Pixmap -> ocrspine bridge
# materializes (also used by the paddle acceptance tests' fixture decode).
ocrspine = { path = "../../../ocrspine", optional = true }
image = { workspace = true, optional = true }

[features]
# OFF by default (P0-5): the lean base wheel must NOT carry the PaddleOCR engine.
# Enable it explicitly for an OCR build (`cargo build --features paddle-ocr`,
# `maturin develop --features ocr` via the py-bindings `ocr` alias).
default = []
# Gates the whole `paddle` adapter module + its ocrspine/image dependencies.
paddle-ocr = ["dep:ocrspine", "dep:image"]

[dev-dependencies]
proptest.workspace = true
