[package]
name = "pdf-render"
publish = false  # crates.io: name "pdfspine" reserved only; this lib ships via PyPI (Python-first, like ragspine)
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Vector/text/image page rasterizer (page -> Pixmap) for pdfspine (M6, PRD §8.11)."

[dependencies]
# Objects + geometry (Matrix/Point/Rect/IRect) + the typed Error this crate
# wraps. The DAG root (PRD §9.1).
pdf-core.workspace = true
# Glyph outlines + metrics: text rendering feeds `ttf-parser` outlines (via
# pdf-fonts) into the rasterizer's path builder (PRD §8.11 / §8.5).
pdf-fonts.workspace = true
# The content interpreter: yields positioned glyphs + constructed draw paths +
# image placements (the drawcalls this crate paints). PRD §8.6 / §8.11.
pdf-text.workspace = true
# Pixmap output type + image-XObject decode (the composited raster source and
# the final raster target type). PRD §8.10 / §8.11.
pdf-image.workspace = true
# Typed error wrapping (`From` impls for the upstream crate errors).
thiserror.workspace = true
# Anti-aliased 2D path rasterizer (fill/stroke/clip/blend). Leaf primitive; the
# PDF→drawcall intelligence stays first-party. See [workspace.dependencies].
tiny-skia.workspace = true
# Glyph-outline extraction (FontFile2 TrueType / FontFile3 OpenType-CFF). Its
# `OutlineBuilder` feeds straight into a tiny-skia `PathBuilder` (PRD §8.11);
# no separate glyph-raster crate is added. See [workspace.dependencies].
ttf-parser.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "render"
harness = false
