[package]
name = "pdf-text"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Content-stream text interpreter, TextPage, get_text formats and search for oxide-pdf. Placeholder in M0."

[dependencies]
pdf-core.workspace = true
pdf-fonts.workspace = true
smol_str.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
proptest.workspace = true
