[package]
name = "pdf-text"
publish = false  # crates.io: name "pdfspine" reserved only; this lib ships via PyPI (Python-first, like ragspine)
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Content-stream text interpreter, TextPage, get_text formats and search for pdfspine. Placeholder in M0."

[dependencies]
pdf-core.workspace = true
pdf-fonts.workspace = true
smol_str.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
criterion = { version = "0.8.2", default-features = false, features = ["cargo_bench_support"] }
proptest.workspace = true

[[bench]]
name = "textpage"
harness = false
