[package]
name = "py-bindings"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "PyO3 bindings for oxide-pdf; builds the _core extension module. FFI chokepoint."
publish = false

[lib]
name = "_core"
# cdylib for the Python extension module; rlib so it can be unit-tested.
crate-type = ["cdylib", "rlib"]

[dependencies]
# Default features (incl. `encryption` and `paddle-ocr`) are on, so the shipped
# wheel gets oxide's pure-Rust PaddleOCR engine (`engine="paddle"`); `paddle-ocr`
# is named explicitly to make the dependency intentional and survive any future
# change to pdf-api's default set.
pdf-api = { workspace = true, features = ["paddle-ocr"] }
# abi3-py311 (not py310): the buffer-protocol slots (`bf_getbuffer` /
# `bf_releasebuffer`) used by `Pixmap` (PRD §9.4) entered the stable ABI in
# CPython 3.11, so a single abi3 wheel that ships the zero-copy buffer protocol
# requires the 3.11 floor. The wheel still covers every supported (>=3.11)
# interpreter from one artifact.
pyo3 = { workspace = true, features = ["abi3-py311", "extension-module"] }
